added inspector code to see table data

--- a/Resources/climate_analysis_notes.ipynb
+++ b/Resources/climate_analysis_notes.ipynb
@@ -302,17 +302,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('2016-08-23', 0.0), ('2016-08-24', 0.08), ('2016-08-25', 0.08), ('2016-08-26', 0.0), ('2016-08-27', 0.0), ('2016-08-28', 0.01), ('2016-08-29', 0.0), ('2016-08-30', 0.0), ('2016-08-31', 0.13), ('2016-09-01', 0.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Perform a query to retrieve the data and precipitation scores\n",
     "    # session.query() function for this query will take two parameters. We will reference the Measurement table using Measurement.date and Measurement.prcp\n",
     "    # use the filter() function to filter out the data we don't need.\n",
+    "    # use limit() function to display part of list.\n",
     "    # add .all() to the end of our existing query, which extracts all of the results from our query and put them in a list. \n",
-    "results = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= prev_year).all()    \n",
-    "\n",
-    "# print(results)"
+    "results = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= prev_year).limit(10).all()\n",
+    "print(results)"
    ]
   },
   {
@@ -388,7 +396,7 @@
    "outputs": [],
    "source": [
     "# Convert the DataFrame to strings, and then we'll set our index to \"False.\" This will allow us to print the DataFrame without the index\n",
-    "# print(df.to_string(index=False))"
+    "print(df[:10].to_string(index=False))"
    ]
   },
   {
@@ -407,7 +415,7 @@
    "source": [
     "# Sort the dataframe by date\n",
     "df = df.sort_index()\n",
-    "# print(df.to_string(index=False))"
+    "print(df[:10].to_string(index=False))"
    ]
   },
   {
@@ -445,7 +453,10 @@
    ],
    "source": [
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
-    "df.plot()"
+    "df.plot()\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -551,22 +562,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# How many stations are available in this dataset?\n"
+    "### Find the Number of Stations\n",
+    "Using the session.query() we will write a query to get the number of stations in our dataset. \n",
+    "\n",
+    "Continuing with our query, we'll use func.count, which essentially counts a given dataset we are interested in. In this case, we want to count the total number of stations. We can do this by referencing Station.station, which will give us the number of stations\n",
+    "\n",
+    "Now we need to add the .all() function to the end of this query so that our results are returned as a list. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9,)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many stations are available in this dataset?\n",
+    "    # Start by using session.query() to create a query\n",
+    "    # Use func.count, which essentially counts a given dataset we are interested in \n",
+    "        # By referencing Station.station it give us the number of stations\n",
+    "    #  add the .all() function to the end of this query so that our results are returned as a list.     \n",
+    "stations_count = session.query(func.count(Station.station)).all()\n",
+    "print(stations_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Determine the Most Active Stations\n",
+    "Begin with the function we use to start every query session.query(). Next, we need to add a few parameters to our query. We'll list the stations and the counts.\n",
+    "\n",
+    "We want to group the data by the station name, and then order by the count for each station in descending order. We're going to add group_by() first.\n",
+    "\n",
+    "Now let's add the order_by function. This function will order our results in the order that we specify, in this case, descending order. Our query results will be returned as a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 2772),\n",
+       " ('USC00519397', 2724),\n",
+       " ('USC00513117', 2709),\n",
+       " ('USC00519523', 2669),\n",
+       " ('USC00516128', 2612),\n",
+       " ('USC00514830', 2202),\n",
+       " ('USC00511918', 1979),\n",
+       " ('USC00517948', 1372),\n",
+       " ('USC00518838', 511)]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What are the most active stations?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "    # Start by using session.query() to create a query\n",
+    "    # Add a few parameters to our query to list the stations and the counts\n",
+    "    # Add group_by() function to group by station name \n",
+    "    # Add the order_by function to order our results in the order that we specify, in this case, descending order\n",
+    "    # Add the .all() function to  return all of the results of our query \n",
+    "stations_count_list = session.query(Measurement.station, func.count(Measurement.station)).\\\n",
+    "        group_by(Measurement.station).order_by(func.count(Measurement.station).desc()).all()\n",
+    "\n",
+    "stations_count_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find Low, High, and Average Temperatures"
    ]
   },
   {
@@ -576,8 +660,17 @@
    "outputs": [],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature most active station?\n"
+    "# highest temperature recorded, and average temperature most active station?\n",
+    "    calculate the minimum, maximum, and average temperatures with the following functions: func.min, func.max, and func.avg.\n",
+    "session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
