--- a/Resources/climate_analysis.ipynb
+++ b/Resources/climate_analysis.ipynb
@@ -911,9 +911,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -925,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
