--- a/Resources/climate_analysis_notes.ipynb
+++ b/Resources/climate_analysis_notes.ipynb
@@ -1003,24 +1003,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>79.0</td>\n",
+       "      <th>68</th>\n",
+       "      <td>76.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>70.0</td>\n",
+       "      <th>92</th>\n",
+       "      <td>75.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>68.0</td>\n",
+       "      <th>190</th>\n",
+       "      <td>73.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>342</th>\n",
+       "      <th>29</th>\n",
        "      <td>77.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>340</th>\n",
-       "      <td>81.0</td>\n",
+       "      <th>26</th>\n",
+       "      <td>78.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1028,11 +1028,11 @@
       ],
       "text/plain": [
        "     tobs\n",
-       "41   79.0\n",
-       "106  70.0\n",
-       "159  68.0\n",
-       "342  77.0\n",
-       "340  81.0"
+       "68   76.0\n",
+       "92   75.0\n",
+       "190  73.0\n",
+       "29   77.0\n",
+       "26   78.0"
       ]
      },
      "execution_count": 36,
@@ -1087,12 +1087,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
     "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-39-bdfb760155d3>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-39-bdfb760155d3>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    export FLASK_APP=app.py\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run a Flask App\n",
+    "export FLASK_APP=app.py\n",
+    "set FLASK_APP=app.py\n",
+    "flask run"
    ]
   },
   {
@@ -1112,9 +1140,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1126,7 +1154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
