--- a/Resources/climate_analysis.ipynb
+++ b/Resources/climate_analysis.ipynb
@@ -406,29 +406,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1055</th>\n",
-       "      <td>2016-11-21</td>\n",
+       "      <th>105</th>\n",
+       "      <td>2016-12-07</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>964</th>\n",
+       "      <td>2017-07-09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>958</th>\n",
+       "      <td>2017-06-29</td>\n",
        "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015</th>\n",
-       "      <td>2017-01-15</td>\n",
-       "      <td>0.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>566</th>\n",
-       "      <td>2017-03-18</td>\n",
-       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            date  precipation\n",
-       "1055  2016-11-21          NaN\n",
-       "2015  2017-01-15         0.01\n",
-       "566   2017-03-18         0.00"
+       "           date  precipation\n",
+       "105  2016-12-07          0.0\n",
+       "964  2017-07-09          0.0\n",
+       "958  2017-06-29          NaN"
       ]
      },
      "execution_count": 22,
@@ -700,6 +700,28 @@
     {
      "data": {
       "text/plain": [
+       "[(9,)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Expression Example\n",
+    "station_count = [station_count for station_count in session.query(func.count(Station.station)).all()]\n",
+    "station_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "[('USC00519281', 2772),\n",
        " ('USC00519397', 2724),\n",
        " ('USC00513117', 2709),\n",
@@ -711,7 +733,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +763,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -796,24 +818,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>166</th>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
        "      <td>73.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>67.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>65.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142</th>\n",
-       "      <td>69.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>77.0</td>\n",
+       "      <th>72</th>\n",
+       "      <td>75.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -821,14 +843,14 @@
       ],
       "text/plain": [
        "     tobs\n",
-       "13   73.0\n",
-       "186  67.0\n",
-       "187  65.0\n",
-       "142  69.0\n",
-       "6    77.0"
+       "166  75.0\n",
+       "35   78.0\n",
+       "217  68.0\n",
+       "173  73.0\n",
+       "72   75.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -881,32 +903,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at this plot, we can infer that a vast majority of the observations were over 67 degrees. If you count up the bins to the right of 67 degrees, you will get about 325 days where it was over 67 degrees when the temperature was observed."
+    "jsonify(temps=temps)Looking at this plot, we can infer that a vast majority of the observations were over 67 degrees. If you count up the bins to the right of 67 degrees, you will get about 325 days where it was over 67 degrees when the temperature was observed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[71.0, 77.21989528795811, 83.0]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "def calc_temps(start_date, end_date):\n",
+    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
+    "    \n",
+    "    if not end_date:\n",
+    "        results = session.query(*sel).\\\n",
+    "         filter(func.strftime('%Y-%m-%d', Measurement.date) >= start_date).all()\n",
+    "        temps = list(np.ravel(results))         \n",
+    "        return temps\n",
+    "\n",
+    "    results = results = session.query(*sel).\\\n",
+    "     filter(func.strftime('%Y-%m-%d', Measurement.date) >= start_date).\\\n",
+    "     filter(func.strftime('%Y-%m-%d', Measurement.date) <= end_date).all()\n",
+    "    temps = list(np.ravel(results))              \n",
+    "    return temps\n",
+    "\n",
+    "calc_temps(\"2017-06-01\", \"2017-06-30\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Challenge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
