--- a/Resources/SurfsUp_Challenge.ipynb
+++ b/Resources/SurfsUp_Challenge.ipynb
@@ -3,60 +3,69 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Dependencies\n",
-    "import numpy as np\n",
-    "\n",
-    "# Python SQL toolkit and Object Relational Mapper\n",
-    "import sqlalchemy\n",
-    "from sqlalchemy.ext.automap import automap_base\n",
-    "from sqlalchemy.orm import Session\n",
+    "# Dependencies\r\n",
+    "import numpy as np\r\n",
+    "\r\n",
+    "# Python SQL toolkit and Object Relational Mapper\r\n",
+    "import sqlalchemy\r\n",
+    "from sqlalchemy.ext.automap import automap_base\r\n",
+    "from sqlalchemy.orm import Session\r\n",
     "from sqlalchemy import create_engine, func"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "engine = create_engine(\"sqlite:///hawaii.sqlite\")\n",
-    "\n",
-    "# reflect an existing database into a new model\n",
-    "Base = automap_base()\n",
-    "# reflect the tables\n",
-    "Base.prepare(engine, reflect=True)\n",
-    "\n",
-    "# Save references to each table\n",
-    "Measurement = Base.classes.measurement\n",
+    "engine = create_engine(\"sqlite:///hawaii.sqlite\")\r\n",
+    "\r\n",
+    "# reflect an existing database into a new model\r\n",
+    "Base = automap_base()\r\n",
+    "# reflect the tables\r\n",
+    "Base.prepare(engine, reflect=True)\r\n",
+    "\r\n",
+    "# Save references to each table\r\n",
+    "Measurement = Base.classes.measurement\r\n",
     "Station = Base.classes.station"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n",
+    "# Create our session (link) from Python to the DB\r\n",
     "session = Session(engine)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## D1: Determine the Summary Statistics for June"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "source": [
+    "# 1. Import the sqlalchemy extract function.\r\n",
+    "from sqlalchemy import extract\r\n",
+    "\r\n",
+    "# 2. Write a query that filters the Measurement table to retrieve the temperatures for the month of June. \r\n",
+    "\r\n",
+    "temps = session.query(Measurement.date, Measurement.tobs).filter(extract('month', Measurement.date) == \"06\").all()\r\n",
+    "temps[:5]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[('2010-06-01', 78.0),\n",
@@ -66,53 +75,47 @@
        " ('2010-06-05', 77.0)]"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
-   "source": [
-    "# 1. Import the sqlalchemy extract function.\n",
-    "from sqlalchemy import extract\n",
-    "\n",
-    "# 2. Write a query that filters the Measurement table to retrieve the temperatures for the month of June. \n",
-    "\n",
-    "temps = session.query(Measurement.date, Measurement.tobs).filter(extract('month', Measurement.date) == \"06\").all()\n",
-    "temps[:5]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "#  3. Convert the June temperatures to a list.\r\n",
+    "june_temps = list(np.ravel(temps))\r\n",
+    "june_temps[:5]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[('2010-06-01', 78.0),\n",
-       " ('2010-06-02', 76.0),\n",
-       " ('2010-06-03', 78.0),\n",
-       " ('2010-06-04', 76.0),\n",
-       " ('2010-06-05', 77.0)]"
+       "['2010-06-01', '78.0', '2010-06-02', '76.0', '2010-06-03']"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
-   "source": [
-    "#  3. Convert the June temperatures to a list.\n",
-    "june_temps = list(temps)\n",
-    "june_temps[:5]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "source": [
+    "# 4. Create a DataFrame from the list of temperatures for the month of June. \r\n",
+    "import pandas as pd\r\n",
+    "\r\n",
+    "june_temps_df = pd.DataFrame(temps, columns=[\"Date\", \"June Temps\"])\r\n",
+    "june_temps_df.sample(n=5)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -139,28 +142,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>2014-06-23</td>\n",
-       "      <td>76.0</td>\n",
+       "      <th>814</th>\n",
+       "      <td>2010-06-11</td>\n",
+       "      <td>77.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1124</th>\n",
-       "      <td>2011-06-23</td>\n",
-       "      <td>73.0</td>\n",
+       "      <th>912</th>\n",
+       "      <td>2012-06-10</td>\n",
+       "      <td>75.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>601</th>\n",
-       "      <td>2015-06-25</td>\n",
-       "      <td>78.0</td>\n",
+       "      <th>984</th>\n",
+       "      <td>2014-06-25</td>\n",
+       "      <td>74.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1155</th>\n",
-       "      <td>2012-06-24</td>\n",
-       "      <td>71.0</td>\n",
+       "      <th>488</th>\n",
+       "      <td>2010-06-17</td>\n",
+       "      <td>75.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>2012-06-27</td>\n",
+       "      <th>610</th>\n",
+       "      <td>2016-06-07</td>\n",
        "      <td>75.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -168,33 +171,30 @@
        "</div>"
       ],
       "text/plain": [
-       "            Date  June Temps\n",
-       "138   2014-06-23        76.0\n",
-       "1124  2011-06-23        73.0\n",
-       "601   2015-06-25        78.0\n",
-       "1155  2012-06-24        71.0\n",
-       "82    2012-06-27        75.0"
+       "           Date  June Temps\n",
+       "814  2010-06-11        77.0\n",
+       "912  2012-06-10        75.0\n",
+       "984  2014-06-25        74.0\n",
+       "488  2010-06-17        75.0\n",
+       "610  2016-06-07        75.0"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "# 4. Create a DataFrame from the list of temperatures for the month of June. \n",
-    "import pandas as pd\n",
-    "\n",
-    "june_temps_df = pd.DataFrame(june_temps, columns=[\"Date\", \"June Temps\"])\n",
-    "june_temps_df.sample(n=5)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "source": [
+    "# 5. Calculate and print out the summary statistics for the June temperature DataFrame.\r\n",
+    "june_temps_df.describe()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -267,29 +267,30 @@
        "max      85.000000"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
-   "source": [
-    "# 5. Calculate and print out the summary statistics for the June temperature DataFrame.\n",
-    "june_temps_df.describe()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## D2: Determine the Summary Statistics for December"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "source": [
+    "# 6. Write a query that filters the Measurement table to retrieve the temperatures for the month of December.\r\n",
+    "temps = session.query(Measurement.date, Measurement.tobs).filter(extract('month', Measurement.date) == \"12\").all()\r\n",
+    "temps[:5]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[('2010-12-01', 76.0),\n",
@@ -299,33 +300,45 @@
        " ('2010-12-07', 64.0)]"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 8
     }
    ],
-   "source": [
-    "# 6. Write a query that filters the Measurement table to retrieve the temperatures for the month of December.\n",
-    "temps = session.query(Measurement.date, Measurement.tobs).filter(extract('month', Measurement.date) == \"12\").all()\n",
-    "temps[:5]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# 7. Convert the December temperatures to a list.\n",
-    "dec_temps = list(temps)"
-   ]
+    "# 7. Convert the December temperatures to a list.\r\n",
+    "dec_temps = list(np.ravel(temps))\r\n",
+    "dec_temps[:5]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['2010-12-01', '76.0', '2010-12-03', '74.0', '2010-12-04']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "source": [
+    "# 8. Create a DataFrame from the list of temperatures for the month of December. \r\n",
+    "dec_temps_df = pd.DataFrame(temps, columns=[\"Date\", \"December Temps\"])\r\n",
+    "dec_temps_df.sample(n=5)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -352,29 +365,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>394</th>\n",
-       "      <td>2015-06-11</td>\n",
+       "      <th>1307</th>\n",
+       "      <td>2014-12-28</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>2013-12-11</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2011-12-03</td>\n",
+       "      <td>73.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1213</th>\n",
+       "      <td>2011-12-24</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1504</th>\n",
+       "      <td>2016-12-19</td>\n",
        "      <td>72.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>2015-06-22</td>\n",
-       "      <td>79.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>2014-06-19</td>\n",
-       "      <td>78.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1457</th>\n",
-       "      <td>2014-06-30</td>\n",
-       "      <td>69.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>2016-06-25</td>\n",
-       "      <td>78.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -382,30 +395,29 @@
       ],
       "text/plain": [
        "            Date  December Temps\n",
-       "394   2015-06-11            72.0\n",
-       "167   2015-06-22            79.0\n",
-       "134   2014-06-19            78.0\n",
-       "1457  2014-06-30            69.0\n",
-       "200   2016-06-25            78.0"
+       "1307  2014-12-28            76.0\n",
+       "313   2013-12-11            75.0\n",
+       "27    2011-12-03            73.0\n",
+       "1213  2011-12-24            70.0\n",
+       "1504  2016-12-19            72.0"
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 10
     }
    ],
-   "source": [
-    "# 8. Create a DataFrame from the list of temperatures for the month of December. \n",
-    "dec_temps_df = pd.DataFrame(june_temps, columns=[\"Date\", \"December Temps\"])\n",
-    "dec_temps_df.sample(n=5)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "source": [
+    "# 9. Calculate and print out the summary statistics for the Decemeber temperature DataFrame.\r\n",
+    "dec_temps_df.describe()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -432,35 +444,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>1700.000000</td>\n",
+       "      <td>1517.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>74.944118</td>\n",
+       "      <td>71.041529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>3.257417</td>\n",
+       "      <td>3.745920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>64.000000</td>\n",
+       "      <td>56.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>73.000000</td>\n",
+       "      <td>69.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>75.000000</td>\n",
+       "      <td>71.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>77.000000</td>\n",
+       "      <td>74.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>85.000000</td>\n",
+       "      <td>83.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -468,32 +480,127 @@
       ],
       "text/plain": [
        "       December Temps\n",
-       "count     1700.000000\n",
-       "mean        74.944118\n",
-       "std          3.257417\n",
-       "min         64.000000\n",
-       "25%         73.000000\n",
-       "50%         75.000000\n",
-       "75%         77.000000\n",
-       "max         85.000000"
+       "count     1517.000000\n",
+       "mean        71.041529\n",
+       "std          3.745920\n",
+       "min         56.000000\n",
+       "25%         69.000000\n",
+       "50%         71.000000\n",
+       "75%         74.000000\n",
+       "max         83.000000"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "source": [
-    "# 9. Calculate and print out the summary statistics for the Decemeber temperature DataFrame.\n",
-    "dec_temps_df.describe()"
-   ]
+    "june_temps = june_temps_df.describe()\r\n",
+    "dec_temps = dec_temps_df.describe()\r\n",
+    "\r\n",
+    "jun_vs_dec_temps = june_temps.merge(dec_temps, left_index=True, right_index=True)\r\n",
+    "jun_vs_dec_temps"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>June Temps</th>\n",
+       "      <th>December Temps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1700.000000</td>\n",
+       "      <td>1517.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>74.944118</td>\n",
+       "      <td>71.041529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.257417</td>\n",
+       "      <td>3.745920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>74.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>83.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        June Temps  December Temps\n",
+       "count  1700.000000     1517.000000\n",
+       "mean     74.944118       71.041529\n",
+       "std       3.257417        3.745920\n",
+       "min      64.000000       56.000000\n",
+       "25%      73.000000       69.000000\n",
+       "50%      75.000000       71.000000\n",
+       "75%      77.000000       74.000000\n",
+       "max      85.000000       83.000000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
-   "language": "python",
-   "name": "pythondata"
+   "name": "python3",
+   "display_name": "Python 3.7.10 64-bit ('PythonData': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -506,6 +613,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "interpreter": {
+   "hash": "249e5e7a09ecfff04bf2f3c245eb333db89e051ef4ebbe19a6a0f6f6e5d0b19d"
   }
  },
  "nbformat": 4,
